--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         <activity android:name=".ProfileActivity"/>
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".LoginActivity"/>
+        <activity android:name=".GiveBussinesAdActivity"/>
+        <activity android:name=".AdvertisementsActivity"/>
     </application>
 
 </manifest>
